# voiceScope

./: .coverage  .dockerignore  .env.example  .gitignore  .opencodeignore  BACKEND.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-BRIEF.md  DESIGN-PROMPT.md  DESIGN.md  Dockerfile  OPENDESIGN-PROMPT.md  PLAN-frontend.md  PLAN-harness.md  PLAN-launch.md  PLAN.md  PROMPT.md  README.md  SECURITY.md  cli.py  docker-compose.yml  main.py  pyproject.toml  railway.toml  requirements.txt
agents/: analysis_agent.py  base.py  eval_agent.py  flow_agent.py  registry.py  report_agent.py  speaker_agent.py  transcription_agent.py
api/: routes.py  schemas.py  sse.py
chroma_db/: chroma.sqlite3
core/: assertions.py  audio_quality.py  batch.py  benchmark.py  calibration.py  citations.py  context.py  cross_check.py  crosscheck.py  extractions.py  facts.py  feedback.py  harness.py  knowledge_base.py  optimizer.py  outcome_check.py  pipeline.py  prompt_tracker.py  qa.py  self_improve.py  sentiment_check.py  test_harness.py
demo/: webhook_demo.py
docs/: webhook-flow.md
examples/: custom_agent.py
frontend/: package-lock.json  package.json
knowledge/: business_policy.md
llm_providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  mistral_provider.py  ollama_provider.py  openai_provider.py  registry.py
middleware/: auth.py  rate_limit.py
scripts/: generate_showcase_audio.py
storage/: chroma_store.py  cost_store.py  db.py  monitoring.py
stt_providers/: base.py  deepgram_provider.py  gemini_provider.py  registry.py  whisper_provider.py
tests/: conftest.py  test_agents.py  test_api.py  test_assertions.py  test_batch.py  test_cases.json  test_chroma_store.py  test_cli.py  test_context.py  test_cost_store.py  test_cross_check.py  test_data_labeled.json  test_db.py  test_exceptions.py  test_harness.py  test_knowledge_base.py  test_llm_providers.py  test_middleware.py  test_new_features.py  test_pipeline_integration.py  test_providers.py  test_resilience.py  test_self_improve.py  test_sse.py  test_stt_providers.py  test_webhook_parsers.py  test_webhooks.py
utils/: exceptions.py  guardrails.py  logger.py  resilience.py  security.py  tracing.py
(+16 files in other folders)
